--- a/Processes/4.3 Direct and Manage Project Work.md
+++ b/Processes/4.3 Direct and Manage Project Work.md
@@ -94,5 +94,5 @@ Any change to the project management plan goes through the organization's change
 - [[Lessons Learned Register]]
 - [[Requirements documentation]]
 - [[Risk register]]
-- [[Stakeholder register]]
+- [[Stakeholder Register]]
 ## 4.3.3.7 OPAs Updates
