--- a/Processes/4.4 Manage Project Knowledge.md
+++ b/Processes/4.4 Manage Project Knowledge.md
@@ -40,7 +40,7 @@ Prior organizational knowledge is leveraged to produce or improve the project ou
 - [[Lessons Learned Register]]
 - [[Project team assignments]]
 - [[Resource breakdown structure]]
-- [[Stakeholder register]]
+- [[Stakeholder Register]]
 ## 4.4.1.3 [[Deliverables]]
 ## 4.4.1.4 Enterprise Environmental Factors
 ```dataview
