--- a/Processes/4.6 Perform integrated change control.md
+++ b/Processes/4.6 Perform integrated change control.md
@@ -33,7 +33,7 @@ Allows for documented changes within the project to be considered in an integrat
 ## 4.6.1.1 [[Project Management Plan]]
 - [[Change management Plan]]
 - [[Configuration management plan]]
-- [[Scope management plan]]
+- [[Scope Management Plan]]
 - [[Schedule Baseline]]
 - [[Cost baseline]]
 ## 4.6.1.2 Project Documents
