--- a/Processes/5.1 Plan Scope Management.md
+++ b/Processes/5.1 Plan Scope Management.md
@@ -20,7 +20,7 @@ Page: 134
 Section: "5.1"
 ---
 # Description
-Creating a [[Scope management plan]] that documents how the [[project scope]] and [[product scope]]  will be defined, validated, and controlled.
+Creating a [[Scope Management Plan]] that documents how the [[project scope]] and [[product scope]]  will be defined, validated, and controlled.
 ### Key Benefits
 Provides guidance and direction on how scope will be managed throughout the project.
 # Inputs
@@ -55,5 +55,5 @@ GROUP BY ToolAndTechniqueGroup
 - [[Industry, Discipline, Application Area, and other Focus Area of the Project]]
 ## [[Meetings]]
 # Outputs
-- [[Scope management plan]]
-- [[Requirements management plan]]
+- [[Scope Management Plan]]
+- [[Requirements Management Plan]]
