--- a/Processes/5.2 Collect requirements.md
+++ b/Processes/5.2 Collect requirements.md
@@ -21,14 +21,27 @@ Provides the basis for defining the [[product scope]] and [[project scope]].
 # TImes Performed
 `=this.TimesPerformed`
 # Inputs
-## Enterprise Environmental Factors
+## 5.2.1.1 [[Project Charter]]
+## 5.2.1.2 [[Project Management Plan]]
+- [[Scope Management Plan]]
+- [[Requirements Management Plan]]
+- [[Stakeholder Engagement Plan]]
+## 5.2.1.3 Project Documents
+- [[Assumption Log]]
+- [[Lessons Learned Register]]
+- [[Stakeholder Register]]
+## 5.2.1.4 Business Documents
+- [[Business Case]]
+## 5.2.1.5 [[Agreements]]
+
+## 5.2.1.6 Enterprise Environmental Factors
 ```dataview
 TABLE WITHOUT ID rows.file.link as "EEFs", Category
 FROM #eef
 WHERE contains(this.EEFs, file.link)
 GROUP BY Category
 ```
-## Organizational process assets
+## 5.2.1.7 Organizational process assets
 ```dataview
 TABLE WITHOUT ID rows.file.link as "OPAs", Category
 FROM #opa
@@ -51,15 +64,15 @@ GROUP BY ToolAndTechniqueGroup
 # .1 Inputs
 [Project Charter](Project%20Charter.md)
 [Project Management Plan](Project%20Management%20Plan.md)
-* [Scope management plan](Scope%20management%20plan.md)
-* [Requirements management plan](Requirements%20management%20plan.md)
-* [Stakeholder engagement plan](Stakeholder%20engagement%20plan.md)
+* [Scope Management Plan](Scope%20Management%20Plan.md)
+* [Requirements Management Plan](Requirements%20Management%20Plan.md)
+* [Stakeholder Engagement Plan](Stakeholder%20Engagement%20Plan.md)
 
 
 Project documents:
 * [Assumption Log](Assumption%20Log.md)
 * [Lessons Learned Register](Lessons%20Learned%20Register.md)
-* [Stakeholder register](Stakeholder%20register.md)
+* [Stakeholder Register](Stakeholder%20Register.md)
 
 Business documents:
 * [Business Case](Business%20Case.md)
@@ -69,7 +82,7 @@ Enterprise Environmental Factors
 Organizational process assets
 
 # .2 Tools & techniques
-Expert judgement - see [Stakeholder register](Stakeholder%20register.md)
+Expert judgement - see [Stakeholder Register](Stakeholder%20Register.md)
 Data gathering:
 * [Brainstorming](Brainstorming.md)
 * Interviews
