--- a/Processes/4.2 Develop Project Management Plan.md
+++ b/Processes/4.2 Develop Project Management Plan.md
@@ -48,7 +48,7 @@ FROM #eef
 WHERE contains(this.EEFs, file.link)
 GROUP BY Category
 ```
-## 4.2.1.4 Organizational process assets
+## 4.2.1.4 Organizational Process Assets
 ```dataview
 TABLE WITHOUT ID rows.file.link as "OPAs", Category
 FROM #opa
