--- a/Processes/4.4 Manage Project Knowledge.md
+++ b/Processes/4.4 Manage Project Knowledge.md
@@ -49,7 +49,7 @@ FROM #eef
 WHERE contains(this.EEFs, file.link)
 GROUP BY Category
 ```
-## 4.4.1.5 Organizational process assets
+## 4.4.1.5 Organizational Process Assets
 ```dataview
 TABLE WITHOUT ID rows.file.link as "OPAs", Category
 FROM #opa
