--- a/Processes/4.5 Monitor and control project work.md
+++ b/Processes/4.5 Monitor and control project work.md
@@ -65,7 +65,7 @@ FROM #eef
 WHERE contains(this.EEFs, file.link)
 GROUP BY Category
 ```
-## 4.5.1.6 Organizational process assets
+## 4.5.1.6 Organizational Process Assets
 ```dataview
 TABLE WITHOUT ID rows.file.link as "OPAs", Category
 FROM #opa
