--- a/Processes/4.7 Close project or phase.md
+++ b/Processes/4.7 Close project or phase.md
@@ -65,7 +65,7 @@ The project or phase information is archived, the planned work is completed, and
 - [[Benefits Management Plan]]
 ## 4.7.1.6 [[Agreements]]
 ## 4.7.1.7 [[Procurement Documentation]]
-## 4.7.1.8 Organizational process assets
+## 4.7.1.8 Organizational Process Assets
 ```dataview
 TABLE WITHOUT ID rows.file.link as "OPAs", Category
 FROM #opa
