--- a/Processes/5.2 Collect requirements.md
+++ b/Processes/5.2 Collect requirements.md
@@ -41,7 +41,7 @@ FROM #eef
 WHERE contains(this.EEFs, file.link)
 GROUP BY Category
 ```
-## 5.2.1.7 Organizational process assets
+## 5.2.1.7 Organizational Process Assets
 ```dataview
 TABLE WITHOUT ID rows.file.link as "OPAs", Category
 FROM #opa
@@ -79,7 +79,7 @@ Business documents:
 
 [Agreements](Agreements.md)
 Enterprise Environmental Factors
-Organizational process assets
+Organizational Process Assets
 
 # .2 Tools & techniques
 Expert judgement - see [Stakeholder Register](Stakeholder%20Register.md)
