--- a/Processes/4.1 Develop Project Charter.md
+++ b/Processes/4.1 Develop Project Charter.md
@@ -46,7 +46,7 @@ FROM #eef
 WHERE contains(this.EEFs, file.link)
 GROUP BY Category
 ```
-## 4.1.1.4 Organizational process assets
+## 4.1.1.4 Organizational Process Assets
 ```dataview
 TABLE WITHOUT ID rows.file.link as "OPAs", Category
 FROM #opa
