--- a/Processes/4.6 Perform integrated change control.md
+++ b/Processes/4.6 Perform integrated change control.md
@@ -53,7 +53,7 @@ FROM #eef
 WHERE contains(this.EEFs, file.link)
 GROUP BY Category
 ```
-## 4.6.1.6 Organizational process assets
+## 4.6.1.6 Organizational Process Assets
 ```dataview
 TABLE WITHOUT ID rows.file.link as "OPAs", Category
 FROM #opa
