--- a/Processes/4.3 Direct and Manage Project Work.md
+++ b/Processes/4.3 Direct and Manage Project Work.md
@@ -54,7 +54,7 @@ FROM #opa
 WHERE contains(this.OPAs, file.link)
 GROUP BY Category
 ```
-# Tools & techniques
+# Tools & Techniques
 ```dataview
 TABLE WITHOUT ID ToolAndTechniqueGroup as "Group", rows.file.link as "Tools & Techniques"
 FROM #tool-technique
