--- a/Processes/5.2 Collect requirements.md
+++ b/Processes/5.2 Collect requirements.md
@@ -48,7 +48,7 @@ FROM #opa
 WHERE contains(this.OPAs, file.link)
 GROUP BY Category
 ```
-# Tools & techniques
+# Tools & Techniques
 ```dataview
 TABLE WITHOUT ID ToolAndTechniqueGroup as "Group", rows.file.link as "Tools & Techniques"
 FROM #tool-technique
